# SciTrans-LLMs

./: .gitignore  ACTUAL_IMPROVEMENTS.md  AI_AGENT_PROMPT.md  API_MISMATCH_GUIDE.md  CHANGES.md  CLEANUP_PLAN.md  CODEBASE_ANALYSIS_REPORT.md  CODEBASE_ANALYSIS_REPORT_UPDATED.md  CODEBASE_STATUS_REPORT.md  COMPLETE_SYSTEM_GUIDE.md  CONTRIBUTING.md  DOCUMENTATION.txt  EXPERIMENTS.md  EXTRACTION_IMPROVEMENTS.md  GRADIO_STATUS.md  GUI_FIXED.md  HOW_TO_RUN.md  IMMEDIATE_ACTION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  INSTALL.md  LICENSE  MODULE_REFERENCE.md  QUICKSTART_GUI.md  QUICK_START_IMPROVEMENTS.md  README.md  SYSTEM_OVERVIEW.md  SYSTEM_READY.md  TESTING_COMPLETE.md  TESTING_STATUS.md  TESTING_SUMMARY.md  THESIS_GUIDE.md  USER_GUIDE.md  WARP.md  pyproject.toml  requirements.txt  run_gui.py  run_gui_simple.py  run_translate.py  scitran  (+8 more)
.nicegui/: storage-user-c19f7c20-e9ad-4422-981f-e82168d3c35c.json  storage-user-d45bc3df-f569-477d-a760-11915d1dc4d7.json
corpus/: README.md  metadata.json
results/ablation/: ablation_20251208_183518.json  ablation_20251208_183518.tex  ablation_20251208_183518.txt
results/main/: main_20251208_183508.json  main_20251208_183508.tex  main_20251208_183508.txt
results/thesis/: ablation_table.tex  contribution.tex  results_table.tex  stats.json
scitran_llms/: __init__.py  cli.py  config.py  gui.py  masking.py  models.py  pipeline.py
scitran_llms/ingest/: __init__.py  pdf.py
scitran_llms/render/: __init__.py  pdf.py
scitran_llms/translate/: __init__.py  base.py  dictionary.py  googletrans.py  mymemory.py
scitrans_llms/: __init__.py  __main__.py  bootstrap.py  cli.py  cli.py.bak  config.py  diagnostics.py  gui.py  gui_gradio.py  keys.py  mask.py  masking.py  models.py  overview.py  pipeline.py  utils.py
scitrans_llms/eval/: __init__.py  ablation.py  baselines.py  metrics.py  runner.py
scitrans_llms/experiments/: __init__.py  corpus.py  runner.py  thesis.py
scitrans_llms/ingest/: __init__.py  analyzer.py  pdf.py  yolo_detection.py
scitrans_llms/refine/: __init__.py  base.py  llm.py  postprocess.py  prompting.py  rerank.py
scitrans_llms/render/: __init__.py  pdf.py
scitrans_llms/translate/: __init__.py  backends.py  base.py  context.py  (+10 more)
scitrans_lm/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  diagnostics.py  gui.py  keys.py  mask.py  overview.py  pipeline.py  utils.py
scitrans_next/: __init__.py  cli.py  gui.py  keys.py  masking.py  models.py  pipeline.py  utils.py
scripts/: check_extraction.py  collect_corpus.py  download_samples.py  full_pipeline.py  quick_test.py  run_experiments.py  setup_keys.py  test_end_to_end.py
tests/: test_comprehensive.py  test_core.py  test_e2e.py  test_masking.py  test_pdf_extraction.py  test_rendering.py  test_translation.py
thesis/: GENERATION_REPORT.json  HOW_TO_USE.md  README.md  chapter_experiments.tex  generate_thesis_data.py
(+159 files in other folders)
